fix styling of poem to wrap text and use material-ui components

--- a/app/assets/stylesheets/poems.scss
+++ b/app/assets/stylesheets/poems.scss
@@ -3,14 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .poem {
-  padding-top: 10px;
-  border-bottom: solid 1px #ccc;
-  display:table;
-  width:100%;
+  margin: 25px;
+  padding: 10px;
+  display: table;
+  width: 100%;
 }
 
 .vote {
-  border: solid 1px #ccc;
+  // border: solid 1px #ccc;
   padding: 10px;
   margin: 15px;
   text-align: center;
