--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,5 +1,5 @@
 body {
-  width:500px;
+  width:70%;
   margin:auto;
   font-family: Arial, sans-serif;
   font-size: 14px;
